clang/test/BSC/Negative/Trait/r1/definition_8/definition_8.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F for int;

_Trait F* get(_Trait F* f) {
  return f;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{initializing 'int' with an expression of incompatible type '_Trait F *'}}
  return 0;
}
